@@ -6,6 +6,7 @@ Bug Fixes:
   - KNX does not return scene numbers sent by a physical push button, SCENE and LEARN_SCENE seem to vica versa (ORCJAVA-282)
   - The ColorPickerBuilder from ORCJAVA-235 is using the wrong attribute name for the dynamic attribute (ORCJAVA-290)
   - openremote.sh start creates an unbound catalina.out file (ORCJAVA-273)
+  - Fix openremote.sh to work with paths that contain spaces (ORCJAVA-280)
 
 Controller 2.1.0 (2012-XX-XX Twin Galaxies)
 ===========================================
